[gd_scene load_steps=6 format=3 uid="uid://bm8wwfito3q3y"]

[ext_resource type="Script" uid="uid://d0p2vfjsjafd2" path="res://Spawner.gd" id="1_00s5r"]
[ext_resource type="PackedScene" uid="uid://d4mved3pthar7" path="res://Enemies/Bunny/bunny_enemy.tscn" id="2_00s5r"]
[ext_resource type="PackedScene" uid="uid://yp7hwemcqcle" path="res://Enemies/Cat/cat_enemy.tscn" id="3_63vqd"]
[ext_resource type="PackedScene" uid="uid://c5uuts3mfsw66" path="res://Enemies/Rat/rat_enemy.tscn" id="4_6fq3q"]
[ext_resource type="PackedScene" uid="uid://dygvxdpt3lauf" path="res://Enemies/Dog/dog_enemy.tscn" id="4_nrau0"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_00s5r")
bunny = ExtResource("2_00s5r")
cat = ExtResource("3_63vqd")
rat = ExtResource("4_6fq3q")
dog = ExtResource("4_nrau0")
enemy_waves = []

[node name="UI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
offset_left = 1232.0
offset_top = 100.0
offset_right = 1274.0
offset_bottom = 140.0

[node name="Minute" type="Label" parent="UI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Label2" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
text = ":"

[node name="Second" type="Label" parent="UI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Pattern" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Boss" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Elite" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Pattern" to="." method="_on_pattern_timeout"]
[connection signal="timeout" from="Boss" to="." method="_on_boss_timeout"]
[connection signal="timeout" from="Elite" to="." method="_on_elite_timeout"]
